customize coc bindings

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,13 +1,19 @@
 {
     "coc.preferences.jumpCommand": "tab drop",
-    "python.jediEnabled": true,
     "python.linting.enabled": true,
-    "python.linting.pylintEnabled": false,
+    "python.linting.mypyEnabled": true,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": ["--max-line-length=120"],
+    "python.linting.flake8Args": [
+        "--max-line-length=120"
+    ],
     "python.formatting.provider": "black",
     "python.formatting.blackPath": "~/.pyenv/sofa3.6_env/bin/black",
-    "python.formatting.blackArgs": ["--line-length","120"],
-    "coc.preferences.formatOnSaveFiletypes": ["python", "json"]
+    "python.formatting.blackArgs": [
+        "--line-length",
+        "120"
+    ],
+    "coc.preferences.formatOnSaveFiletypes": [
+        "python",
+        "json"
+    ]
 }
-
